--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Inferno Starter",
-  "short_name": "inferno",
+  "name": "Preact Starter",
+  "short_name": "Preact Starter",
   "start_url": "/?homescreen=1",
   "display": "standalone",
   "orientation": "portrait",
@@ -9,7 +9,7 @@
   "icons": [{
     "src": "icon/android-chrome-144x144.png",
     "type": "image/png",
-    "sizes": "192x192"
+    "sizes": "144x144"
   },
   {
     "src": "icon/android-chrome-192x192.png",
