shorten short_name

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Preact Starter",
-  "short_name": "Preact Starter",
+  "short_name": "Preact",
   "start_url": "/?homescreen=1",
   "display": "standalone",
   "orientation": "portrait",
