--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "style-loader": "^0.13.1",
     "sw-precache-webpack-plugin": "^0.7.1",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
-    "webpack": "beta",
+    "webpack": "^2.2.0",
     "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "beta"
+    "webpack-dev-server": "^2.2.0"
   }
 }
