replace cross-env with webpack --env flag

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://lukeed.com"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack",
+    "build": "webpack --env.production --config config/webpack",
     "start": "serve dist -s",
     "watch": "webpack-dashboard -- webpack-dev-server --config config/webpack"
   },
@@ -29,7 +29,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "beta",
     "html-webpack-plugin": "^2.28.0",
