--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-react-jsx": "^6.22.0",
-    "babel-preset-babili": "^0.0.11",
+    "babel-preset-babili": "0.0.12",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
-    "sass-loader": "^5.0.1",
-    "serve": "^3.2.7",
+    "sass-loader": "^6.0.3",
+    "serve": "^5.0.2",
     "style-loader": "^0.13.1",
     "sw-precache-webpack-plugin": "^0.9.0",
     "webpack": "^2.2.1",
