--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "preact-router": "^2.5.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-react-jsx": "^6.22.0",
-    "babel-preset-babili": "0.0.12",
+    "babel-preset-babili": "^0.1.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.1",
+    "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.3",
-    "serve": "^5.0.2",
-    "style-loader": "^0.13.1",
-    "sw-precache-webpack-plugin": "^0.9.0",
-    "webpack": "^2.2.1",
-    "webpack-dashboard": "^0.3.0",
+    "serve": "^6.0.2",
+    "style-loader": "^0.18.2",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "webpack": "^3.1.0",
+    "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.3.0"
   }
 }
