--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch": "webpack-dashboard -- webpack-dev-server --config config/webpack"
   },
   "dependencies": {
+    "ganalytics": "^2.0.1",
     "md-colors": "^1.0.0",
     "preact": "^8.1.0",
     "preact-router": "^2.5.4"
