--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "webpack --env.production --config config/webpack",
     "start": "serve dist -s",
-    "watch": "webpack-dashboard -- webpack-dev-server --config config/webpack"
+    "watch": "webpack-dev-server --config config/webpack"
   },
   "dependencies": {
     "ganalytics": "^2.0.1",
@@ -40,7 +40,6 @@
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "webpack": "^3.4.1",
-    "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.6.1"
   }
 }
